[tool.poetry]
name = "commodore"
version = "0.0.0"
description = ""
authors = ["José Medeiros <joseprsm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.83.0"
google-cloud-firestore = "^2.6.1"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
